Fix letter-spacing in ClanMemberItem module and comment out cookie clearing in LoginBtn

--- a/app/components/ClanMemberItem/ClanMemberItem.module.css
+++ b/app/components/ClanMemberItem/ClanMemberItem.module.css
@@ -10,7 +10,7 @@
 	font-weight: 500;
 	justify-content: space-around;
 	gap: 1ch;
-	letter-spacing: 0.5px;
+	letter-spacing: 0px;
 }
 
 .role {
